🚚 Rename "panel" to "cut"

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -4,8 +4,8 @@
   "@appTitle": {},
   "appBarTitle": "Cutting Plans for Fabric",
   "@appBarTitle": {},
-  "defaultPanelName": "Cut {index}",
-  "@defaultPanelName": {
+  "defaultCutName": "Cut {index}",
+  "@defaultCutName": {
     "placeholders": {
       "index": {
         "type": "int",
@@ -40,26 +40,26 @@
   "@patternWidth": {},
   "patternLength": "Pattern length",
   "@patternLength": {},
-  "panelCardTitle": "Cuts",
-  "@panelCardTitle": {},
-  "panelName": "Cut name",
-  "@panelName": {},
-  "panelWidth": "Cut width",
-  "@panelWidth": {},
-  "panelLength": "Cut length",
-  "@panelLength": {},
-  "panelQuantity": "Number of cuts",
-  "@panelQuantity": {},
-  "panelCenterOnPattern": "Center on pattern",
-  "@panelCenterOnPattern": {},
-  "panelAllowRotation": "Allow rotation",
-  "@panelAllowRotation": {},
-  "panelTableName": "Name",
-  "@panelTableName": {},
-  "panelTableMeasurements": "Measurements",
-  "@panelTableMeasurements": {},
-  "panelTableQuantity": "Qty",
-  "@panelTableQuantity": {},
+  "cutCardTitle": "Cuts",
+  "@cutCardTitle": {},
+  "cutName": "Cut name",
+  "@cutName": {},
+  "cutWidth": "Cut width",
+  "@cutWidth": {},
+  "cutLength": "Cut length",
+  "@cutLength": {},
+  "cutQuantity": "Number of cuts",
+  "@cutQuantity": {},
+  "cutCenterOnPattern": "Center on pattern",
+  "@cutCenterOnPattern": {},
+  "cutAllowRotation": "Allow rotation",
+  "@cutAllowRotation": {},
+  "cutTableName": "Name",
+  "@cutTableName": {},
+  "cutTableMeasurements": "Measurements",
+  "@cutTableMeasurements": {},
+  "cutTableQuantity": "Qty",
+  "@cutTableQuantity": {},
   "editCTA": "Edit",
   "@editCTA": {},
   "addCTA": "Add",
@@ -74,10 +74,10 @@
   "@yesCTA": {},
   "noCTA": "No",
   "@noCTA": {},
-  "deletePanelTitle": "Delete cut",
-  "@deletePanelTitle": {},
-  "deletePanelMessage": "Are you sure you want to delete the cut \"{name}\"?",
-  "@deletePanelMessage": {
+  "deleteCutTitle": "Delete cut",
+  "@deleteCutTitle": {},
+  "deleteCutMessage": "Are you sure you want to delete the cut \"{name}\"?",
+  "@deleteCutMessage": {
     "placeholders": {
       "name": {
         "type": "String",
