--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -4,8 +4,8 @@
   "@appTitle": {},
   "appBarTitle": "Plans de coupe pour tissu",
   "@appBarTitle": {},
-  "defaultPanelName": "Découpe {index}",
-  "@defaultPanelName": {
+  "defaultCutName": "Découpe {index}",
+  "@defaultCutName": {
     "placeholders": {
       "index": {
         "type": "int",
@@ -40,26 +40,26 @@
   "@patternWidth": {},
   "patternLength": "Longueur du motif",
   "@patternLength": {},
-  "panelCardTitle": "Découpes",
-  "@panelCardTitle": {},
-  "panelName": "Nom de la découpe",
-  "@panelName": {},
-  "panelWidth": "Largeur de la découpe",
-  "@panelWidth": {},
-  "panelLength": "Longueur de la découpe",
-  "@panelLength": {},
-  "panelQuantity": "Nombre de découpes",
-  "@panelQuantity": {},
-  "panelCenterOnPattern": "Centrer sur le motif",
-  "@panelCenterOnPattern": {},
-  "panelAllowRotation": "Autoriser la rotation",
-  "@panelAllowRotation": {},
-  "panelTableName": "Nom",
-  "@panelTableName": {},
-  "panelTableMeasurements": "Dimensions",
-  "@panelTableMeasurements": {},
-  "panelTableQuantity": "Qté",
-  "@panelTableQuantity": {},
+  "cutCardTitle": "Découpes",
+  "@cutCardTitle": {},
+  "cutName": "Nom de la découpe",
+  "@cutName": {},
+  "cutWidth": "Largeur de la découpe",
+  "@cutWidth": {},
+  "cutLength": "Longueur de la découpe",
+  "@cutLength": {},
+  "cutQuantity": "Nombre de découpes",
+  "@cutQuantity": {},
+  "cutCenterOnPattern": "Centrer sur le motif",
+  "@cutCenterOnPattern": {},
+  "cutAllowRotation": "Autoriser la rotation",
+  "@cutAllowRotation": {},
+  "cutTableName": "Nom",
+  "@cutTableName": {},
+  "cutTableMeasurements": "Dimensions",
+  "@cutTableMeasurements": {},
+  "cutTableQuantity": "Qté",
+  "@cutTableQuantity": {},
   "editCTA": "Modifier",
   "@editCTA": {},
   "addCTA": "Ajouter",
@@ -74,10 +74,10 @@
   "@yesCTA": {},
   "noCTA": "Non",
   "@noCTA": {},
-  "deletePanelTitle": "Supprimer la découpe",
-  "@deletePanelTitle": {},
-  "deletePanelMessage": "Voulez-vous vraiment supprimer la découpe \"{name}\" ?",
-  "@deletePanelMessage": {
+  "deleteCutTitle": "Supprimer la découpe",
+  "@deleteCutTitle": {},
+  "deleteCutMessage": "Voulez-vous vraiment supprimer la découpe \"{name}\" ?",
+  "@deleteCutMessage": {
     "placeholders": {
       "name": {
         "type": "String",
