--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -66,7 +66,7 @@
   "@addCTA": {},
   "showPattern": "Afficher le motif sur le plan de coupe",
   "@showPattern": {},
-  "launchAlgorithmCTA": "Lancer l''algorithme de découpe",
+  "launchAlgorithmCTA": "Lancer l'algorithme de découpe",
   "@launchAlgorithmCTA": {},
   "noPattern": "Aucun",
   "@noPattern": {},
