✨ Share cutting plan image

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -85,6 +85,14 @@
       }
     }
   },
+  "saveImageName": "Cutting plan {date}",
+  "@saveImageName": {
+    "placeholders": {
+      "date": {
+        "type": "String"
+      }
+    }
+  },
   "saveCTA": "Save",
   "@saveCTA": {},
   "tooltipAllowRotation": "Allow rotation",
